# 3dtris

./: .editorconfig  .gitmodules  COPYRIGHT.md  Makefile  README.md  blur.glsl  compose.glsl  controller.js  controls.js  downsample2d.glsl  game.js  index.html  main.js  piece-generator.js  pieces.js  privacy.md  shader.glsl  ssao.glsl  tests.html  tests.js
.github/workflows/: ci.yml
_layouts/: default.html
android_ar/: .gitignore  build.gradle
android_ar/app/: CMakeLists.txt  build.gradle
android_ar/app/src/main/: AndroidManifest.xml
android_ar/app/src/main/cpp/: background_renderer.cc  background_renderer.h  control_renderer.cc  control_renderer.h  debug_renderer.cc  debug_renderer.h  game_box_renderer.cc  game_box_renderer.h  game_controller.cc  game_controller.h  game_renderer.cc  game_renderer.h  hello_ar_application.cc  hello_ar_application.h  jni_interface.cc  jni_interface.h  main_application.cc  main_application.h  obj_renderer.cc  obj_renderer.h  util.cc  util.h
android_ar/app/src/main/cpp/game/: include  src
android_ar/app/src/main/java/xyz/osei/tris/: CameraPermissionHelper.java  HelloArActivity.java  JniInterface.java  MainActivity.java
android_ar/app/src/main/res/layout/: activity_main.xml
android_ar/app/src/main/res/values/: strings.xml
android_ar/gradle/wrapper/: gradle-wrapper.properties
browser/: controller.js  game-cpp.js  index.html  main.js
browser/test/: game-cpp.js  index.html
cpp/: .gitignore  Makefile  main.cpp  setup-emcc.bash
cpp/include/: api.hpp  cemented-block-array.hpp  game-box.hpp  game-private.hpp  game.hpp  piece-generator.hpp  piece.hpp
cpp/js-api/: js-api.cpp
cpp/src/: cemented-block-array.cpp  game-box.cpp  game.cpp  piece-generator.cpp  piece.cpp
cpp/test/: testsuite.cpp
js-libs/: parseQueryString.js
shaders/: blur.glsl  compose.glsl  ssao.glsl
test/: game.js  index.html  pieces.js
tests/: game.js  index.html
